[B]4.8.1[/B]

- Fix missing label in view id=50
- Fix broken bool in PosterThumb variable
- Fix default home item selection issue
- Remove unneeded code
- Fix default select item when using login
- Remove unneeded close button

[B]4.8.0[/B]

- Bump skin version and update changelog
- Add movie title format option
- Bump xbmc.gui for Nexus
- Add Nexus game changes
- Add show password button to keyboard
- Add Player.Process(videoscantype) infolabel
- Add Cuts, Scene Markers, and Editlist
- Add missing aspect ratios
- Add 'infill' attribute to border textures
- Add HDR flagging
- Delete DialogFavourites.xml
- Fix home episode thumbs not using spoiler settings
- Add default start item selection

[B]4.7.15[/B]

- Fix image in select dialog

[B]4.7.14[/B]

- Add PVR guide controls dialog

[B]4.7.13[/B]

- Updated language files from Transifex

[B]4.7.12[/B]

- Updated language files from Transifex

[B]4.7.11[/B]

- Fix PVR radio record button
- Fix PVR recording label
- Fix posters
- Add "Versions" button to add-on information dialog

[B]4.7.10[/B]

- Updated language files from Transifex

[B]4.7.9[/B]

- Fix season posters

[B]4.7.6[/B]

- Switch to dynamic content for home screen widgets
- Home screen widgets show only unwatched items

[B]4.7.5[/B]

- Bump xbmc.gui
- Add support for enabled add-ons

[B]4.7.1[/B]

- Add support for PVR reminders
- Fix / add new buttons in PVR information window
- Update PVR group manager dialog with latest changes

[B]4.7.0[/B]

- Added chapter markers to progress bar
- Uppercase Season and Episode indicators on home Recently Added Episodes

[B]4.6.9[/B]

- Media flagging updates
- Language updates

[B]4.6.8[/B]

- Add HasArchive indicator to channels and programs
- Add CoreELEC compatibility

[B]4.6.7[/B]

- Language updates

[B]4.6.6[/B]

- Language updates
- Fix comments in strings.po
- Fix addon.xml

[B]4.6.5[/B]

- Language updates
- Fix endtime visibility for video info screen
- Add video duration into view

[B]4.6.4[/B]
