@@ -50,7 +50,6 @@
 				<aligny>center</aligny>
 				<textcolor>selected</textcolor>
 				<shadowcolor>black</shadowcolor>
-				<visible>!Control.IsVisible(120)</visible>
 			</control>
 			<control type="label" id="2">
 				<description>Pick label</description>
@@ -64,7 +63,7 @@
 				<aligny>center</aligny>
 				<textcolor>selected</textcolor>
 				<shadowcolor>black</shadowcolor>
-				<visible>Control.IsVisible(120) + !Control.IsVisible(110)</visible>
+				<visible>!Control.IsVisible(110)</visible>
 			</control>
 			<!-- ** Required ** Do not change <id> or <type> (Smooth scrolling list for lyrics) -->
 			<control type="list" id="110">
@@ -145,95 +144,6 @@
 				<onup>110</onup>
 				<showonepage>true</showonepage>
 				<visible>Control.IsVisible(110)</visible>
-			</control>
-			<!-- ** Required ** Do not change <id> or <type> (Song Chooser if it gets it wrong) -->
-			<!-- Set as not visible, as no longer needed & simplest solution - https://github.com/xbmc/skin.confluence/issues/173 -->
-			<control type="list" id="120">
-				<visible>false</visible>
-				<left>30</left>
-				<top>60</top>
-				<width>620</width>
-				<height>360</height>
-				<onleft>121</onleft>
-				<onright>121</onright>
-				<onup>120</onup>
-				<ondown>120</ondown>
-				<pagecontrol>121</pagecontrol>
-				<scrolltime>200</scrolltime>
-				<itemlayout height="40">
-					<control type="image">
-						<left>0</left>
-						<top>0</top>
-						<width>620</width>
-						<height>41</height>
-						<texture border="5">MenuItemNF.png</texture>
-					</control>
-					<control type="label">
-						<left>10</left>
-						<top>0</top>
-						<width>600</width>
-						<height>40</height>
-						<font>font13</font>
-						<align>left</align>
-						<aligny>center</aligny>
-						<selectedcolor>selected</selectedcolor>
-						<label>$INFO[ListItem.Label]</label>
-					</control>
-				</itemlayout>
-				<focusedlayout height="40">
-					<control type="image">
-						<left>0</left>
-						<top>0</top>
-						<width>620</width>
-						<height>41</height>
-						<visible>!Control.HasFocus(120)</visible>
-						<texture border="5">MenuItemNF.png</texture>
-					</control>
-					<control type="image">
-						<left>0</left>
-						<top>0</top>
-						<width>620</width>
-						<height>41</height>
-						<visible>Control.HasFocus(120)</visible>
-						<texture border="5">MenuItemFO.png</texture>
-					</control>
-					<control type="label">
-						<left>10</left>
-						<top>0</top>
-						<width>600</width>
-						<height>40</height>
-						<font>font13</font>
-						<align>left</align>
-						<aligny>center</aligny>
-						<selectedcolor>selected</selectedcolor>
-						<label>$INFO[ListItem.Label]</label>
-					</control>
-				</focusedlayout>
-			</control>
-			<control type="label">
-				<left>360</left>
-				<top>420</top>
-				<width>200</width>
-				<height>20</height>
-				<font>font12</font>
-				<aligny>center</aligny>
-				<align>right</align>
-				<textcolor>grey2</textcolor>
-				<label>$INFO[Container(120).CurrentPage, ( $LOCALIZE[31024] ]$INFO[Container(120).NumPages,/, )]</label>
-				<visible>Control.IsVisible(121)</visible>
-			</control>
-			<control type="spincontrol" id="121">
-				<description>Next page button</description>
-				<left>570</left>
-				<top>420</top>
-				<subtype>page</subtype>
-				<font/>
-				<onleft>120</onleft>
-				<onright>120</onright>
-				<ondown>120</ondown>
-				<onup>120</onup>
-				<showonepage>true</showonepage>
-				<visible>Control.IsVisible(120)</visible>
 			</control>
 			<control type="label">
 				<description>Scraper label</description>
